--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
   
 
   <script type="text/javascript">
-    var duoshuoQuery = {short_name:"izen"};
+    var duoshuoQuery = {short_name:"fea-shine"};
     (function() {
       var ds = document.createElement('script');
       ds.type = 'text/javascript';ds.async = true;
@@ -671,7 +671,7 @@
   
 
   <script type="text/javascript">
-    var duoshuoQuery = {short_name:"izen"};
+    var duoshuoQuery = {short_name:"fea-shine"};
     (function() {
       var ds = document.createElement('script');
       ds.type = 'text/javascript';ds.async = true;
